Fixed #2. Changed Navigation Menu
Fixed the bug where the image would take up too much space. Change the style of the navigation bar buttons.

--- a/stegTool/public/stylesheets/main.css
+++ b/stegTool/public/stylesheets/main.css
@@ -35,7 +35,8 @@ select {
 }
 
 .menu img {
-  height: 100px;
+  height: 200px;
+  
 }
 
 .buttons {
@@ -66,6 +67,30 @@ select {
   background-color: #06c258;
 }
 
+ul {
+  list-style-type: none;
+  margin:0;
+  padding:0;
+}
+
+li {
+  color: white;
+  /* display: inline; */
+  background-color: #059142;
+  margin:0px;
+  /* padding:15px; */
+  border-right: 1px solid black;
+}
+
+li:last-child {
+  border:none;
+}
+
+a {
+  display:inline-block;
+  padding:15px;
+}
+
 /**********IMAGE UPLOAD**********/
 
 .image-upload-container {
@@ -73,7 +98,7 @@ select {
   height: 500px;
   border: 4px dotted white;
   /* border-right: 5px solid #059142; */
-  border-radius: 5px;
+  /* border-style: dotted white; */
   /* background-color: antiquewhite; */
 }
 
@@ -91,5 +116,11 @@ select {
 
 .message-container textarea {
   height: 150px;
-  /* margin-bottom: 200px; */
+  resize: none;
+}
+
+.image-upload-container img {
+  object-fit: contain;
+  width:100%;
+  height:100%;
 }
